<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.sectic.sbookau">
    <item android:id="@+id/itm_menu_exit"
        android:icon="@drawable/baseline_exit_to_app_white_24"
        android:title="@string/menu_exit"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item android:id="@+id/itm_menu_clean"
        android:title="@string/menu_clean"
        android:orderInCategory="2"/>
    <item android:id="@+id/itm_menu_rate"
        android:title="@string/menu_rate"
        android:orderInCategory="3"/>
    <item android:id="@+id/itm_menu_share"
        android:title="@string/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="4"/>
</menu>
