<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <RadioGroup
        android:id="@+id/grp_play_setting_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/chk_play_setting_only_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_res_play_setting_only_selected"
            android:checked="false"
            android:textStyle="italic"/>
        <RadioButton
            android:id="@+id/chk_play_setting_to_end_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_res_play_setting_to_end_list"
            android:checked="false"
            android:textStyle="italic"/>
        <RadioButton
            android:id="@+id/chk_play_setting_num_of_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_res_play_setting_num_of_part"
            android:checked="false"
            android:textStyle="italic"/>
        <RadioButton
            android:id="@+id/chk_play_setting_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_res_play_setting_period"
            android:checked="false"
            android:textStyle="italic"/>
    </RadioGroup>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/lltParts"
        android:padding="10dp">
        <NumberPicker
            android:id="@+id/pkr_play_setting_n_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:descendantFocusability="blocksDescendants"/>
        <TextView
            android:id="@+id/txt_play_setting_n_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chọn Số Phần Muốn Nghe"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/lltTime"
        android:padding="10dp">
        <NumberPicker
            android:id="@+id/pkr_play_setting_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:descendantFocusability="blocksDescendants"/>
        <TextView
            android:id="@+id/txt_play_setting_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chọn Thời Gian Nghe"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>